<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settingsFragment">

    <TextView
        android:id="@+id/optionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/roboto"
        android:text="@string/optionsInSettingsString"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/editProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="312dp"
        android:fontFamily="@font/roboto"
        android:text="@string/accountInSettingsString"
        android:textColor="#711E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editProfileButton"
        app:layout_constraintTop_toBottomOf="@+id/optionTextView" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_buttons_design"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_person"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/edit_profileInSettingsString"
        android:textAllCaps="false"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/changePhoneNumberButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/changePhoneNumberButton"
        android:layout_width="match_parent"
        android:background="@drawable/settings_buttons_design"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_key"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/change_phone_numberInSettingsString"
        android:textAllCaps="false"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsTextView"
        app:layout_constraintEnd_toEndOf="@+id/editProfileButton"
        app:layout_constraintStart_toStartOf="@+id/editProfileButton"
        app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />

    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/settingsInSettingsString"
        android:textColor="#711E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/notificationsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/notificationsButton"
        app:layout_constraintTop_toBottomOf="@+id/changePhoneNumberButton" />

    <Button
        android:id="@+id/notificationsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/settings_buttons_design"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_notifications"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/notificationsInSettingsString"
        android:textAllCaps="false"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/changeLanguageButton"
        app:layout_constraintEnd_toEndOf="@+id/changePhoneNumberButton"
        app:layout_constraintStart_toStartOf="@+id/changePhoneNumberButton"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextView" />

    <Button
        android:id="@+id/changeLanguageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/settings_buttons_design"
        android:drawableStart="@drawable/ic_languagebutton"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/change_languageInSettingsString"
        android:textAllCaps="false"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/moreTextView"
        app:layout_constraintEnd_toEndOf="@+id/notificationsButton"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/notificationsButton"
        app:layout_constraintTop_toBottomOf="@+id/notificationsButton"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/moreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="337dp"
        android:fontFamily="@font/roboto"
        android:text="@string/moreInSettingsString"
        android:textColor="#711E1E"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/aboutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/aboutButton"
        app:layout_constraintTop_toBottomOf="@+id/changeLanguageButton" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/settings_buttons_design"
        android:drawableStart="@drawable/ic_about"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/aboutInSettingsString"
        android:textAllCaps="false"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bugReportButton"
        app:layout_constraintEnd_toEndOf="@+id/changeLanguageButton"
        app:layout_constraintStart_toStartOf="@+id/changeLanguageButton"
        app:layout_constraintTop_toBottomOf="@+id/moreTextView" />

    <Button
        android:id="@+id/bugReportButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/settings_buttons_design"
        android:drawableStart="@drawable/ic_bug_report"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:text="@string/report_a_bugInSettingsString"
        android:textAllCaps="false"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/aboutButton"
        app:layout_constraintStart_toStartOf="@+id/aboutButton"
        app:layout_constraintTop_toBottomOf="@+id/aboutButton" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logout_button"
        android:drawableEnd="@drawable/ic_logout_icon"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:text="@string/logoutInSettingsString"
        android:textAllCaps="false"
        android:textColor="#80000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bugReportButton"
        app:layout_constraintVertical_bias="0.24000001" />


</androidx.constraintlayout.widget.ConstraintLayout>