<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_drop" />

        <TextView
            android:id="@+id/logoNameTextView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:text="@string/rakt_logo"
            android:textColor="#3A1A1A"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logoImageView"
            app:layout_constraintVertical_bias="0.629"
            tools:layout_editor_absoluteX="0dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prefix"
            android:layout_width="54dp"
            android:layout_height="55dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/prefixNumber"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginStart="55dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/mobile_number_hint"
            android:inputType="none"
            android:maxLength="10"
            android:text="@string/mobileNumberInput"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:ignore="TextFields" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/custom_edit_text"
        app:layout_constraintBottom_toBottomOf="@+id/wave2ImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">


        <EditText
            android:id="@+id/otpEditText"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/enter_otp_hint"
            android:inputType="phone"
            android:maxLength="6"
            android:text="@string/mobileNumberInput"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/resendOtp"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="300dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/resend_image_foreground"
            android:fontFamily="@font/righteous" />

    </FrameLayout>


    <Button
        android:id="@+id/verify"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_background_design"
        android:fontFamily="@font/roboto"
        android:text="@string/verify"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004" />

    <ImageView
        android:id="@+id/wave2ImageView"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_weight="1"
        android:contentDescription="@string/wave2image"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_wave3" />

    <Button
        android:id="@+id/back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/back_button"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />


</androidx.constraintlayout.widget.ConstraintLayout>